2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update programs to use the new framework.

	* benchmarks/lib/benchmark.h,
	* benchmarks/lib/benchmark.c: Update to use the new function
	pointer declaration syntax.

	* benchmarks/lib/benchmark.c,
	* benchmarks/mandel/mandel.c,
	* demo/sep.c: Ensure that `create'-to-pointer dereference the
	function pointer.

	* benchmarks/sha/sha1_alt.c: Include `delegate.h' to reach
	`PLACE_LOCAL'.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notice of files changed in 2010.

	* benchmarks/blas/blasbench.h,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/lib/Makefile.am,
	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel21.c,
	* benchmarks/livermore/kernel23.c,
	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel8.c,
	* benchmarks/livermore/kernel9.c,
	* benchmarks/mandel/Makefile.am,
	* benchmarks/mandel/mandel.c,
	* demo/10threads.c,
	* demo/Makefile.am,
	* demo/answer.c,
	* demo/bitblt.c,
	* demo/fibonacci.c,
	* demo/fibre.c,
	* demo/helloworld.c,
	* demo/keyblit.c,
	* demo/perf.c,
	* demo/pi.c,
	* demo/roman.c,
	* demo/sep.c: Add 2010 to copyright notice.

2010-04-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase use of `-b mtalpha'.

	* benchmarks/lib/Makefile.am: Use target alias `mtalpha' instead
	of `ppp-mtalpha' as this is now resolved properly.

2010-03-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' benchmark.

	* benchmarks/mandel/mandel_colors.c: Enable drawing during
	compute by default.

2010-02-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Separate `mandel' benchmark into drawing and non-drawing versions.
	
	* benchmarks/mandel/mandel.c: Conditionalize support for colors,
	disable by default.
	
	* benchmarks/mandel/mandel_colors.c: New. Enable colors.

	* benchmarks/mandel/Makefile.am: New target.

2010-02-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More input for the `fibre' demo and new demo `pi'.
